<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="compose"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher_round"
        android:shortcutShortLabel="@string/short_label"
        android:shortcutLongLabel="@string/long_label"
        android:shortcutDisabledMessage="@string/msg">
        <intent
            android:action="I.am.intent.one"
            android:targetPackage="com.example.neal.shortcutdemo"
            android:targetClass="com.example.neal.shortcutdemo.ShortCutActivity" />
        <!-- If your shortcut is associated with multiple intents, include them
             here. The last intent in the list determines what the user sees when
             they launch this shortcut. -->
        <intent
            android:action="I.am.intent.two"
            android:targetPackage="com.example.neal.shortcutdemo"
            android:targetClass="com.example.neal.shortcutdemo.ShortCutActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <!-- Specify more shortcuts here. -->
    <shortcut
        android:shortcutId="compose1"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher_round"
        android:shortcutShortLabel="@string/short_label1"
        android:shortcutLongLabel="@string/long_label1"
        android:shortcutDisabledMessage="@string/msg1">
        <intent
            android:action="I.am.intent.one"
            android:targetPackage="com.example.neal.shortcutdemo"
            android:targetClass="com.example.neal.shortcutdemo.ShortCutActivity" />
        <!-- If your shortcut is associated with multiple intents, include them
             here. The last intent in the list determines what the user sees when
             they launch this shortcut. -->
        <intent
            android:action="I.am.intent.two"
            android:targetPackage="com.example.neal.shortcutdemo"
            android:targetClass="com.example.neal.shortcutdemo.ShortCutActivity2" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

</shortcuts>